Optimization of some immutable finders and tweak some maximum lengths